// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormState instantiate with valid basic rule 1`] = `
FormState {
  "get": [Function],
  "getErrors": [Function],
  "isValid": [Function],
  "obj": Object {},
  "onChange": undefined,
  "rules": Object {
    "email": "is required",
  },
  "set": [Function],
}
`;

exports[`FormState instantiate with valid basic rule 2`] = `
Object {
  "email": "is required",
}
`;

exports[`FormState validates empty array 1`] = `
Object {
  "kids": "Provide Kids",
}
`;

exports[`FormState validates empty array 2`] = `
Object {
  "kids": "Provide Kids",
}
`;

exports[`FormState validates empty array 3`] = `Object {}`;

exports[`FormState validates empty array 4`] = `
Object {
  "kids": Array [
    "one kid",
  ],
}
`;

exports[`FormState validates empty string 1`] = `
Object {
  "name": "test",
}
`;

exports[`FormState validates rules 1`] = `
FormState {
  "get": [Function],
  "getErrors": [Function],
  "isValid": [Function],
  "obj": Object {},
  "onChange": undefined,
  "rules": [Function],
  "set": [Function],
}
`;

exports[`FormState validates rules 2`] = `
Object {
  "address": Object {
    "home": Object {
      "street": "Street is required",
    },
  },
  "confirm": "Please confirm answers",
  "email": "Email is required",
  "kids": "You need to have at least one kid",
  "name": "Name is required",
  "size": "Size is required",
}
`;

exports[`FormState validates rules 3`] = `
Object {
  "address": Object {
    "home": Object {
      "street": "Street is required",
    },
  },
  "confirm": "Please confirm answers",
  "email": "Email is not valid",
  "kids": "You need to have at least one kid",
  "name": "Name is required",
  "size": "Size is required",
}
`;

exports[`FormState validates rules 4`] = `
Object {
  "address": Object {
    "home": Object {
      "street": "Street is required",
    },
  },
  "confirm": "Please confirm answers",
  "email": "Email is not valid",
  "kids": Array [
    Object {
      "name": "Name is required",
    },
  ],
  "name": "Name is required",
  "size": "Size is required",
}
`;

exports[`FormState validates rules 5`] = `
Object {
  "address": Object {
    "city": "City is required if you provided street",
  },
  "confirm": "Please confirm answers",
  "email": "Email is not valid",
  "kids": Array [
    Object {
      "name": "Name is required",
    },
  ],
  "name": "Name is required",
  "size": "Size is required",
}
`;

exports[`FormState validates rules 6`] = `Object {}`;

exports[`FormState validates rules 7`] = `
Object {
  "address": Object {
    "city": "city",
    "home": Object {
      "street": "street",
    },
  },
  "confirm": true,
  "email": "a@test.com",
  "kids": Array [
    Object {
      "age": 10,
      "name": "paul",
    },
  ],
  "name": "name",
  "size": "big",
}
`;
